--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^2.8.2",
+    "enzyme-to-json": "^1.5.1",
     "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.2",
     "jest-glamor-react": "^1.2.0",
-    "react-test-renderer": "^15.5.4",
+    "react-test-renderer": "^15.6.1",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
   },
